# rust_test

./: .env  Cargo.toml  diesel.toml  readme
migrations/2025-02-28-171612_create_items/: up.sql
migrations/2025-03-14-123900_create_users_roles_permissions/: down.sql  up.sql
src/: config.rs  main.rs  models.rs  schema.rs
src/controllers/: items_controller.rs  mod.rs  user_controller.rs
src/middleware/: jwt.rs
src/models/: item.rs  user.rs
src/routes/: items.rs  mod.rs  user.rs
src/services/: mod.rs  samfa.rs
