[package]
name = "croud_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "2.2.7", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8.1.1"
bcrypt = "0.12"
r2d2 = "0.8"
futures-util = "0.3"
actix-service = "2"



